--- a/index.html
+++ b/index.html
@@ -25,56 +25,6 @@
 </head>
 
 <body>
-    <div id="preloader">
-        <div id="ctn-preloader" class="ctn-preloader">
-            <div class="animation-preloader">
-                <div class="spinner"></div>
-                <div class="txt-loading">
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="L" class="letters-loading">
-                        L
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="N" class="letters-loading">
-                        N
-                    </span>
-                    <span data-text-preloader="D" class="letters-loading">
-                        D
-                    </span>
-                </div>
-                <p class="text-center">Loading</p>
-            </div>
-            <div class="loader">
-                <div class="row">
-                    <div class="col-3 loader-section section-left">
-                        <div class="bg"></div>
-                    </div>
-                    <div class="col-3 loader-section section-left">
-                        <div class="bg"></div>
-                    </div>
-                    <div class="col-3 loader-section section-right">
-                        <div class="bg"></div>
-                    </div>
-                    <div class="col-3 loader-section section-right">
-                        <div class="bg"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="body_wrapper">
         <header class="header_area">
             <nav class="navbar navbar-expand-lg menu_one">
@@ -161,10 +111,10 @@
         <section class="chat_core_features_area sec_pad">
             <div class="container">
                 <div class="hosting_title chat_title text-center">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">What makes<br> SkyPath <span>deliver results</span></h2>
+                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Thousands of <span>airborne pilots</span> <br> help SkyPath <span>deliver results</span></h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="chat_features_item wow fadeInUp">
                             <div class="round">
                                 <div class="round_circle"></div>
@@ -175,26 +125,37 @@
                             <p>Every pilot's ipad is a sensor</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="chat_features_item wow fadeInUp" data-wow-delay="0.2s">
                             <div class="round">
                                 <div class="round_circle two"></div>
                                 <img class="top_img p_absoulte" src="img/home-chat/triangle.png" alt="">
                                 <img src="img/home-chat/mobile.png" alt="">
                             </div>
-                            <a href="#"><h4>Quick Responce</h4></a>
-                            <p>Tidio lets you get all your live chat, e-mail, and Messenger communication in one panel.</p>
+                            <a href="#"><h4>Collect</h4></a>
+                            <p>Using Aircraft WiFi data sent to cloud.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="chat_features_item wow fadeInUp" data-wow-delay="0.4s">
                             <div class="round">
                                 <div class="round_circle three"></div>
                                 <img class="top_img p_absoulte" src="img/home-chat/box.png" alt="">
                                 <img src="img/home-chat/book.png" alt="">
                             </div>
-                            <a href="#"><h4>Easy Report</h4></a>
-                            <p>Tidio lets you get all your live chat, e-mail, and Messenger communication in one panel.</p>
+                            <a href="#"><h4>Analyze</h4></a>
+                            <p>Data meshed, alogorithm allocates severity.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="chat_features_item wow fadeInUp" data-wow-delay="0.4s">
+                            <div class="round">
+                                <div class="round_circle four"></div>
+                                <img class="top_img p_absoulte" src="img/home-chat/box.png" alt="">
+                                <img src="img/home-chat/plane.png" alt="">
+                            </div>
+                            <a href="#"><h4>Broadcast</h4></a>
+                            <p>Updated turbulence info every minute.</p>
                         </div>
                     </div>
                 </div>
@@ -213,8 +174,9 @@
                     <div class="col-lg-5">
                         <div class="chat_features_content pr_70">
                             <img src="img/home-chat/chat_icon.png" alt="">
-                            <h2><span>Move deals</span> through your funnel – fast</h2>
-                            <p>Real-time tools and rich insights mean our support solution amplifies your team for an unbeatable experience.</p>
+                            <h2><span>Reduced</span> severe turbulence inspections</h2>
+                            <p>With objective, real-time reports, maintenance can be notified of the exact "G" tolerance incursions and apply the precise maintenance thus saving unnecessary inspections. Flying through turbulent areas may result with the aircraft overspeeding the Mach limit (MMO). Skypath allows
+                               the pilots to prepare and reduce speed accordingly.</p>
                             <a href="#">Learn more</a>
                         </div>
                     </div>
@@ -234,8 +196,8 @@
                     <div class="col-lg-5 offset-lg-1">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
-                            <h2><span>First ever</span> Video Calling Support</h2>
-                            <p>Real-time tools and rich insights mean our support solution amplifies your team for an unbeatable experience.</p>
+                            <h2><span>Reduced on-board injuries</span></h2>
+                            <p>Crew and passenger injuries create tangible costs and issues of concern. "Crowd Sourcing" wisdom increase pilot and dispatch awareness and confidence in efficiently navigating turbulence.</p>
                             <a href="#">Learn more</a>
                         </div>
                     </div>
@@ -254,58 +216,68 @@
                     <div class="col-lg-5">
                         <div class="chat_features_content pr_60">
                             <img src="img/home-chat/dashboard.png" alt="">
-                            <h2>Dedicated <span>Dashboard Support</span></h2>
-                            <p>Real-time tools and rich insights mean our support solution amplifies your team for an unbeatable experience.</p>
+                            <h2><span>Reduced enroute fuel consumption and preflight reserve fueling</span></h2>
+                            <p>Better information leads to better decisions in critical areas where safety is balanced with efficiency. SkyPath increases operations department trust and confidence in route projections of turbulence hazards as well as allows pilots to safely navigate during the occurrence of rapidly emerging turbulence situations. Significant costs may be avoided in more efficient decisions in loading contingency fuel (for weather avoidance enroute).</p>
                             <a href="#">Learn more</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="chat_features_area">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="chat_features_img chat_features_img_two">
+                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
+                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 offset-lg-1">
+                        <div class="chat_features_content pl_70">
+                            <img src="img/home-chat/video_icon.png" alt="">
+                            <h2><span>Improved forecast guidance for planning</span></h2>
+                            <p>The turbulence feedback loop is instanteneous. More flyable airspace opens up more efficiency for flight planning.</p>
+                            <a href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section class="security_integration_area chat_integration_area">
             <div class="container">
                 <div class="border-bottom"></div>
                 <div class="chat_title text-center">
-                    <h2 class="wow fadeInUp"><span>Integrations.</span> Discover even more possibilities.</h2>
-                    <p>Explore 50+ integrations that make your day-to-day workflow more efficient and familiar. Our extensive developer tools might also strike your fancy.</p>
+                    <h2 class="wow fadeInUp"><span>Made by pilots for pilots!</span></h2>
+                    <p>Co-Founded by professional airline pilots scratching their itch!</p>
                 </div>
             </div>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft">
-                            <img src="img/new-home/kissmetrics.png" alt="">
-                            <h5>KISSmetrics</h5>
+                            <img src="img/logos/elal.png" alt="">
+                            <h5>ELAL Airlines</h5>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.2s">
-                            <img src="img/new-home/metorik.png" alt="">
-                            <h5>Metorik</h5>
+                            <img src="img/logos/united.png" alt="">
+                            <h5>United Airlines</h5>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.4s">
-                            <img src="img/new-home/nicereply-1.png" alt="">
-                            <h5>Nicereply</h5>
+                            <img src="img/logos/avio.png" alt="">
                         </a>
                     </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.6s">
-                            <img src="img/new-home/update.png" alt="">
-                            <h5>Software Updater</h5>
-                        </a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.8s">
-                            <img src="img/new-home/campfire.png" alt="">
-                            <h5>Campfire</h5>
-                        </a>
-                    </div>
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.8s">
-                            <img src="img/new-home/webhooks.png" alt="">
-                            <h5>Webhooks</h5>
+                            <img src="img/logos/aws_gray.png" alt="">
+                            <h5>Powered by AWS</h5>
                         </a>
                     </div>
                 </div>
@@ -318,7 +290,13 @@
                         <div class="clients_feedback_item flex-row-reverse">
                             <div class="feedback_body">
                                 <p>
-                                    Tidio has given our clients a quick and easy way to send over thoughts and questions without delay or wait time! No second guessing – just asked and answered quickly in order to make their purchasing decisions easier!
+                                    Tchao revealed that one of
+
+his favorite iPad
+
+aviation apps is SkyPath
+
+“For so many years the dream of the connected airline has been literally that, a dream. But thanks to mobile devices like iPad, iPhone and Apple Watch that dream is becoming a reality”
                                 </p>
                                 <div class="ratting">
                                     <i class="fas fa-star"></i>
@@ -327,8 +305,8 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h3 class="f_name">John Doe</h3>
-                                <a href="#">hello.com</a>
+                                <h3 class="f_name">Michael Tchao</h3>
+                                <a href="#">Apple VP , iPad product</a>
                             </div>
                             <img src="img/home-chat/john.png" alt="">
                         </div>
@@ -337,7 +315,7 @@
                         <div class="clients_feedback_item">
                             <div class="feedback_body">
                                 <p>
-                                    Tidio has given our clients a quick and easy way to send over thoughts and questions without delay or wait time! No second guessing – just asked and answered quickly in order to make their purchasing decisions easier!
+                                    Skypath provides me with an improved situational awareness, it gives me a heads up and seems to be very accurate
                                 </p>
                                 <div class="ratting">
                                     <i class="fas fa-star"></i>
@@ -346,8 +324,8 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <h3 class="f_name">Richard Tea</h3>
-                                <a href="#">hello.com</a>
+                                <h3 class="f_name">Senior 787 Captain</h3>
+                                <a href="#">ELAL Airlines</a>
                             </div>
                             <img src="img/home-chat/richard.png" alt="">
                         </div>
@@ -358,7 +336,7 @@
         <section class="chat_get_started_area">
             <div class="container">
                 <div class="chat_get_started_content text-center">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Get started with us</h2>
+                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Start a pilot in your airline</h2>
                     <p>A better experience for your customers, fewer headaches for your team. You'll be set up in minutes.</p>
                     <a href="#" class="chat_btn btn_hover">Get Started</a>
                 </div>
@@ -369,8 +347,8 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="f_widget dark_widget company_widget">
-                            <a href="index.html" class="f-logo"><img src="img/logo2.png" alt=""></a>
-                            <p>© 2019 SaasLand, LLC. All rights reserved. Proudly made in NY</p>
+                            <a href="index.html" class="f-logo"><img src="img/skypath-logo-w.png" alt=""></a>
+                            <p>© 2020 Yamasee SkyPath LLC. All rights reserved.</p>
                             <div class="f_social_icon">
                                 <a href="#" class="ti-facebook"></a>
                                 <a href="#" class="ti-twitter-alt"></a>
