--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                                     Home
                                 </a>
                             </li>
+                            <!--
                             <li class="nav-item">
                                 <a title="Pages" class="nav-link" href="#">Company</a>
                             </li>
@@ -67,6 +68,7 @@
                             <li class="nav-item">
                                 <a title="Pages" class="nav-link" href="#">Users Area</a>
                             </li>
+                            -->
                             <li class="nav-item">
                                 <a title="Pages" class="nav-link" href="#">Request Demo</a>
                             </li>
@@ -86,10 +88,10 @@
                     <div class="col-lg-6">
                         <div class="chat_banner_content">
                             <div class="c_tag wow fadeInUp"><img src="img/home-chat/live_chat.png" alt=""> Real time - real turbulence data!</div>
-                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Improve your <strong>safety</strong> and <strong>operational efficiency</strong> with <strong>real-time turbulence data</strong> from other pilots.</h2>
+                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Improve your <strong>safety</strong> and <strong>operational efficiency</strong> with <strong>real-time turbulence data</strong></h2>
                             <div class="text-center pr_100 wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="#" class="chat_btn btn_hover">Request a Demo</a>
-                                <span>(No credit card requierd)</span>
+                                <span>(No credit card required)</span>
                             </div>
                         </div>
                     </div>
@@ -111,7 +113,7 @@
         <section class="chat_core_features_area sec_pad">
             <div class="container">
                 <div class="hosting_title chat_title text-center">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Thousands of <span>airborne pilots</span> <br> help SkyPath <span>deliver results</span></h2>
+                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Tens of thousands of <span>airborne sensors</span> <br> provide real time accurate turbulence data</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
@@ -133,7 +135,7 @@
                                 <img src="img/home-chat/mobile.png" alt="">
                             </div>
                             <a href="#"><h4>Collect</h4></a>
-                            <p>Using Aircraft WiFi data sent to cloud.</p>
+                            <p>Using Aircraft WiFi, data is sent to cloud.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -144,7 +146,7 @@
                                 <img src="img/home-chat/book.png" alt="">
                             </div>
                             <a href="#"><h4>Analyze</h4></a>
-                            <p>Data meshed, alogorithm allocates severity.</p>
+                            <p>Data meshed, algorithm allocates severity.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -175,9 +177,8 @@
                         <div class="chat_features_content pr_70">
                             <img src="img/home-chat/chat_icon.png" alt="">
                             <h2><span>Reduced</span> severe turbulence inspections</h2>
-                            <p>With objective, real-time reports, maintenance can be notified of the exact "G" tolerance incursions and apply the precise maintenance thus saving unnecessary inspections. Flying through turbulent areas may result with the aircraft overspeeding the Mach limit (MMO). Skypath allows
-                               the pilots to prepare and reduce speed accordingly.</p>
-                            <a href="#">Learn more</a>
+                            <p>With objective, real-time reports. Maintenance can substantiate exact "G" tolerance magnitudes and determine the precise maintenance required thus eliminating unnecessary inspections.</p>
+                            <!--<a href="#">Learn more</a>-->
                         </div>
                     </div>
                 </div>
@@ -197,8 +198,8 @@
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Reduced on-board injuries</span></h2>
-                            <p>Crew and passenger injuries create tangible costs and issues of concern. "Crowd Sourcing" wisdom increase pilot and dispatch awareness and confidence in efficiently navigating turbulence.</p>
-                            <a href="#">Learn more</a>
+                            <p>Crew and passenger injuries create tangible costs and issues of concern. "Crowd Sourcing" wisdom increase pilot and dispatch awareness enabling efficient turbulence navigation.</p>
+                            <!--<a href="#">Learn more</a>-->
                         </div>
                     </div>
                 </div>
@@ -217,8 +218,8 @@
                         <div class="chat_features_content pr_60">
                             <img src="img/home-chat/dashboard.png" alt="">
                             <h2><span>Reduced enroute fuel consumption and preflight reserve fueling</span></h2>
-                            <p>Better information leads to better decisions in critical areas where safety is balanced with efficiency. SkyPath increases operations department trust and confidence in route projections of turbulence hazards as well as allows pilots to safely navigate during the occurrence of rapidly emerging turbulence situations. Significant costs may be avoided in more efficient decisions in loading contingency fuel (for weather avoidance enroute).</p>
-                            <a href="#">Learn more</a>
+                            <p>Better information leads to better decisions in critical areas where safety is balanced with efficiency. Skypath allows pilots to safely navigate rapidly emerging turbulence situations. Significant costs may be avoided in efficient dispatch routing, loading contingency fuel decisions and reduced inflight altitude adjustments.</p>
+                            <!--<a href="#">Learn more</a>-->
                         </div>
                     </div>
                 </div>
@@ -237,9 +238,9 @@
                     <div class="col-lg-5 offset-lg-1">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
-                            <h2><span>Improved forecast guidance for planning</span></h2>
-                            <p>The turbulence feedback loop is instanteneous. More flyable airspace opens up more efficiency for flight planning.</p>
-                            <a href="#">Learn more</a>
+                            <h2><span>Improved planning guidance</span></h2>
+                            <p>The turbulence feedback loop is instantaneous. Mappable smooth-air flyable airspace enables efficient dispatch flight planning.</p>
+                            <!--<a href="#">Learn more</a>-->
                         </div>
                     </div>
                 </div>
@@ -252,7 +253,7 @@
                 <div class="border-bottom"></div>
                 <div class="chat_title text-center">
                     <h2 class="wow fadeInUp"><span>Made by pilots for pilots!</span></h2>
-                    <p>Co-Founded by professional airline pilots scratching their itch!</p>
+                    <p>Founded by professional airline pilots seeking to fulfill a critical need.</p>
                 </div>
             </div>
             <div class="container-fluid">
@@ -260,13 +261,11 @@
                     <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft">
                             <img src="img/logos/elal.png" alt="">
-                            <h5>ELAL Airlines</h5>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.2s">
                             <img src="img/logos/united.png" alt="">
-                            <h5>United Airlines</h5>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -277,7 +276,6 @@
                     <div class="col-lg-3 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.6s">
                             <img src="img/logos/aws_gray.png" alt="">
-                            <h5>Powered by AWS</h5>
                         </a>
                     </div>
                 </div>
@@ -290,13 +288,7 @@
                         <div class="clients_feedback_item flex-row-reverse">
                             <div class="feedback_body">
                                 <p>
-                                    Tchao revealed that one of
-
-his favorite iPad
-
-aviation apps is SkyPath
-
-“For so many years the dream of the connected airline has been literally that, a dream. But thanks to mobile devices like iPad, iPhone and Apple Watch that dream is becoming a reality”
+                                    Senior Apple Executive Tchao revealed that one of his favorite iPad aviation apps is SkyPath “For so many years the dream of the connected airline has been literally that, a dream. But thanks to mobile devices like iPad, iPhone and Apple Watch that dream is becoming a reality”
                                 </p>
                                 <div class="ratting">
                                     <i class="fas fa-star"></i>
@@ -306,16 +298,16 @@ aviation apps is SkyPath
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <h3 class="f_name">Michael Tchao</h3>
-                                <a href="#">Apple VP , iPad product</a>
+                                <a href="#">Apple VP, iPad product</a>
                             </div>
-                            <img src="img/home-chat/john.png" alt="">
+                            <!--img src="img/home-chat/john.png" alt="">-->
                         </div>
                     </div>
                     <div class="col-lg-6 p-0 chat_clients_feedback feedback_two">
                         <div class="clients_feedback_item">
                             <div class="feedback_body">
                                 <p>
-                                    Skypath provides me with an improved situational awareness, it gives me a heads up and seems to be very accurate
+                                    Skypath provides amazingly accurate situational awareness. it allows for a safer flight and significantly enhanced passenger comfort
                                 </p>
                                 <div class="ratting">
                                     <i class="fas fa-star"></i>
@@ -336,8 +328,8 @@ aviation apps is SkyPath
         <section class="chat_get_started_area">
             <div class="container">
                 <div class="chat_get_started_content text-center">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Start a pilot in your airline</h2>
-                    <p>A better experience for your customers, fewer headaches for your team. You'll be set up in minutes.</p>
+                    <h2 class="wow fadeInUp" data-wow-delay="0.2s">Start a pilot in your airline today!</h2>
+                    <p>Download the app - You'll be set up in minutes. A better experience for your passengers, fewer headaches for your team.</p>
                     <a href="#" class="chat_btn btn_hover">Get Started</a>
                 </div>
             </div>
