--- a/stage.html
+++ b/stage.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="chat_img">
-                            <video src="/videos/main.mp4" style="width:100%;height:100%" preload="auto" autoplay="" muted="" loop=""></video>
+                            <video src="/videos/small.mp4" style="width:100%;height:100%" preload="auto" autoplay="" muted="" loop=""></video>
                         </div>
                         
                     </div>
@@ -161,10 +161,8 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="chat_features_img chat_features_img_one">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 0, "y": 80}' src="img/home-chat/chat_02.png" alt="">
-                            <img class="p_absoulte chat_two" data-parallax='{"x": 0, "y": -80}' src="img/home-chat/chat_01.png" alt="">
+                        <div class="chat_features_img_one">
+                            <img class="chat_one" src="img/pilots3.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -182,13 +180,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="chat_features_img chat_features_img_two">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
-                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
+                        <div class="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/gally.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-5 offset-lg-1">
+                    <div class="col-lg-6">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Reduced on-board injuries</span></h2>
@@ -203,9 +199,8 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="chat_features_img chat_features_img_three">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="p_absoulte chat_two" src="img/home-chat/support_dashboard.jpg" alt="">
+                        <div class="">
+                            <img class="chat_two" src="img/baloon.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -223,13 +218,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="chat_features_img chat_features_img_two">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
-                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
+                        <div class="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/pilots4.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-5 offset-lg-1">
+                    <div class="col-lg-6">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Improved planning guidance</span></h2>
