--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <header class="header_area">
             <nav class="navbar navbar-expand-lg menu_one">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><img src="img/skypath-logo.png" alt="logo"></a>
-                    <a class="btn_get btn_hover mobile_btn ml-auto" href="#get-app">Get Started</a>
+                    <a class="navbar-brand" href="/"><img src="img/skypath-logo.png" alt="logo"></a>
+                    <a class="btn_get btn_hover mobile_btn ml-auto" href="/contact">Get Started</a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="menu_toggle">
                             <span class="hamburger">
@@ -48,14 +48,14 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav m-auto menu">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="/">
                                     Home
                                 </a>
                             </li>
-                            <!--
                             <li class="nav-item">
-                                <a title="Pages" class="nav-link" href="#">Company</a>
+                                <a title="Pages" class="nav-link" href="/company">Company</a>
                             </li>
+                            <!--
                             <li class="nav-item">
                                 <a title="Pages" class="nav-link" href="#">Physics of turbulence</a>
                             </li>
@@ -70,7 +70,7 @@
                             </li>
                             -->
                             <li class="nav-item">
-                                <a title="Pages" class="nav-link" href="#">Request Demo</a>
+                                <a title="Pages" class="nav-link" href="/contact">Request Demo</a>
                             </li>
 
                         </ul>
@@ -90,20 +90,14 @@
                             <div class="c_tag wow fadeInUp"><img src="img/home-chat/live_chat.png" alt=""> Real time - real turbulence data!</div>
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">Improve your <strong>safety</strong> and <strong>operational efficiency</strong> with <strong>real-time turbulence data</strong></h2>
                             <div class="text-center pr_100 wow fadeInUp" data-wow-delay="0.4s">
-                                <a href="#" class="chat_btn btn_hover">Request a Demo</a>
+                                <a href="/contact" class="chat_btn btn_hover">Request a Demo</a>
                                 <span>(No credit card required)</span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 offset-lg-2">
+                    <div class="col-lg-6">
                         <div class="chat_img">
-                            <img class="p_absoulte p_one" src="img/home-chat/panguin_img_one.png" alt="">
-                            <img class="p_absoulte p_two" src="img/home-chat/panguin_img_two.png" alt="">
-                            <img class="p_absoulte p_three" src="img/home-chat/panguin_img_three.png" alt="">
-                            <div class="round one"></div>
-                            <div class="round two"></div>
-                            <div class="round three"></div>
-                            <img class="wow fadeInUp" data-wow-delay="0.2s" src="img/airtravel.png" alt="chat-img">
+                            <video src="/videos/small.mp4" style="width:100%;height:100%" preload="auto" autoplay="" muted="" loop=""></video>
                         </div>
                         
                     </div>
@@ -167,10 +161,8 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="chat_features_img chat_features_img_one">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 0, "y": 80}' src="img/home-chat/chat_02.png" alt="">
-                            <img class="p_absoulte chat_two" data-parallax='{"x": 0, "y": -80}' src="img/home-chat/chat_01.png" alt="">
+                        <div class="chat_features_img_one">
+                            <img class="chat_one" src="img/pilots3.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -188,13 +180,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="chat_features_img chat_features_img_two">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
-                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
+                        <div class="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/gally.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-5 offset-lg-1">
+                    <div class="col-lg-6">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Reduced on-board injuries</span></h2>
@@ -209,9 +199,8 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="chat_features_img chat_features_img_three">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="p_absoulte chat_two" src="img/home-chat/support_dashboard.jpg" alt="">
+                        <div class="">
+                            <img class="chat_two" src="img/baloon.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -229,13 +218,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="chat_features_img chat_features_img_two">
-                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
-                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
+                        <div class="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/pilots4.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-5 offset-lg-1">
+                    <div class="col-lg-6">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Improved planning guidance</span></h2>
@@ -259,22 +246,22 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft">
+                        <a href="https://www.elal.com" class="s_integration_item wow fadeInLeft">
                             <img src="img/logos/elal.png" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.2s">
+                        <a href="https://www.united.com/en/us" class="s_integration_item wow fadeInLeft" data-wow-delay="0.2s">
                             <img src="img/logos/united.png" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.4s">
+                        <a href="https://www.aviobook.aero/" class="s_integration_item wow fadeInLeft" data-wow-delay="0.4s">
                             <img src="img/logos/avio.png" alt="">
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.6s">
+                        <a href="https://aws.amazon.com/" class="s_integration_item wow fadeInLeft" data-wow-delay="0.6s">
                             <img src="img/logos/aws_gray.png" alt="">
                         </a>
                     </div>
@@ -330,7 +317,7 @@
                 <div class="chat_get_started_content text-center">
                     <h2 class="wow fadeInUp" data-wow-delay="0.2s">Start a pilot in your airline today!</h2>
                     <p>Download the app - You'll be set up in minutes. A better experience for your passengers, fewer headaches for your team.</p>
-                    <a href="#" class="chat_btn btn_hover">Get Started</a>
+                    <a href="/contact" class="chat_btn btn_hover">Get Started</a>
                 </div>
             </div>
         </section>
@@ -339,7 +326,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="f_widget dark_widget company_widget">
-                            <a href="index.html" class="f-logo"><img src="img/skypath-logo-w.png" alt=""></a>
+                            <a href="/" class="f-logo"><img src="img/skypath-logo-w.png" alt=""></a>
                             <p>© 2020 Yamasee SkyPath LLC. All rights reserved.</p>
                             <!--
                             <div class="f_social_icon">
