--- a/old_index.html
+++ b/old_index.html
@@ -95,9 +95,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-4 offset-lg-2">
                         <div class="chat_img">
-                            <video src="/videos/small.mp4" style="width:100%;height:100%" preload="auto" autoplay="" muted="" loop=""></video>
+                            <img class="p_absoulte p_one" src="img/home-chat/panguin_img_one.png" alt="">
+                            <img class="p_absoulte p_two" src="img/home-chat/panguin_img_two.png" alt="">
+                            <img class="p_absoulte p_three" src="img/home-chat/panguin_img_three.png" alt="">
+                            <div class="round one"></div>
+                            <div class="round two"></div>
+                            <div class="round three"></div>
+                            <img class="wow fadeInUp" data-wow-delay="0.2s" src="img/airtravel.png" alt="chat-img">
                         </div>
                         
                     </div>
@@ -161,8 +167,10 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="chat_features_img_one">
-                            <img class="chat_one" src="img/pilots3.jpg" alt="">
+                        <div class="chat_features_img chat_features_img_one">
+                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
+                            <img class="chat_one" data-parallax='{"x": 0, "y": 80}' src="img/home-chat/chat_02.png" alt="">
+                            <img class="p_absoulte chat_two" data-parallax='{"x": 0, "y": -80}' src="img/home-chat/chat_01.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -180,11 +188,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/gally.jpg" alt="">
+                        <div class="chat_features_img chat_features_img_two">
+                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
+                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-5 offset-lg-1">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Reduced on-board injuries</span></h2>
@@ -199,8 +209,9 @@
             <div class="container">
                 <div class="row flex-row-reverse align-items-center">
                     <div class="col-lg-6 offset-lg-1">
-                        <div class="">
-                            <img class="chat_two" src="img/baloon.jpg" alt="">
+                        <div class="chat_features_img chat_features_img_three">
+                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
+                            <img class="p_absoulte chat_two" src="img/home-chat/support_dashboard.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -218,11 +229,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="">
-                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/pilots4.jpg" alt="">
+                        <div class="chat_features_img chat_features_img_two">
+                            <img class="p_absoulte dot_bg" src="img/home-chat/dot.png" alt="">
+                            <img class="chat_one" data-parallax='{"x": 20, "y": -40}' src="img/home-chat/skyp_1.png" alt="">
+                            <img data-parallax='{"x": 0, "y": 40}' class="p_absoulte chat_two" src="img/home-chat/skyp_2.png" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-5 offset-lg-1">
                         <div class="chat_features_content pl_70">
                             <img src="img/home-chat/video_icon.png" alt="">
                             <h2><span>Improved planning guidance</span></h2>
